[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "mom_builder"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
